edit school incomplete